# cpp-nrtrt

./: .gitmodules  CMakeLists.txt
Src/: main.cpp
Src/Camera/: Camera.cpp  Camera.hpp  Pixel.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp
Src/Object/: IObject.hpp  Light.hpp  Sphere.hpp  TransparentSphere.hpp  Triangle.hpp
Src/RandGen/: RandGen.cpp  RandGen.hpp
Src/World/: Ray.hpp  World.cpp  World.hpp
Uts/: PixelTest.cpp  RandGenTest.cpp  RayTest.cpp  SphereTest.cpp  TransparentSphereTest.cpp  TriangleTest.cpp  WorkerTest.cpp
